  - added workaround for ILIKE's unicode bug (postgresql < 8.2) in invoices list 
    searching by customer's name and address (alec) 
  - nowadays max. bandwidth 4096kbit/s for customer is not so excellent, so
    bandwidth limit has been increased to 10000kbit/s aka 10Mbit/s (chilek)
  - added 'big_networks' support in Reports forms (alec)

version 1.9.4 Mot (2006-12-30):

  - fixed upgrade scripts for PostgreSQL versions that do not support
    "ALTER TABLE ... ADD ... NOT NULL DEFAULT ...": 2006061200, 2006082300,
    2006081000 (alec) 
  - added document type "customer sheet" and "contract termination" (alec)
  - BTS#0000599: patched xajax library for using it with other ajaxized stuff (alec)
  - in documents creation numbering plans are binded with document types (alec)
  - added Notes field in customer's data (alec)
  - BTS#0000602: don't hide disposable liabilities for current day (alec)
  - printing customer's groups in new/edit cash receipt form (alec)
  - now we can display to cashier warnings about unconfirmed documents and
    customer's notes with [receipts] options 'show_notes' and 
    'show_documents_warning' (alec)  
  - fixed helpdesk tickets searching (alec)
  - added 'MAC checking' checkbox in nodes and device's IPs data (alec)
  - in new receipt interface on covenants list printing also credit notes (alec)
  - added option 'big_networks' for hidding some big ISP's specific stuff like 
    e.g. long selection dropdowns (alec)
  - big_networks support in forms: helpdesk ticket new/edit, document add,
    invoice new/edit, cash receipts add/edit (alec)
  - added public IP searching in node's quicksearch (alec)
  - quick search fields moved to the top of the page (alec)
  - fixed nodes searching with 'OR' operator (alec)
  - printing page generation time (alec)
  - EtherWerX support: added option phpui/ewx_support, node's ID should be less
    than 99999 (alec) 
  - lms-cutoff: added %b and %B variables in message (alec)